--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 					<nav id="menu">
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
-							<li><a href="About.html">About</a></li>
+							<li><a href="about.html">About</a></li>
 							<li><a href="Work.html">Work</a></li>
-							<li><a href="Experience.html">Experience</a></li>
+							<li><a href="projects.html">Projects</a></li>
 							<li><a href="Education.html">Education</a></li>
 							<li><a href="Brown.html">My Time at Brown</a></li>
 							<li><a href="Links.html">Recommended Links</a></li>
@@ -44,7 +44,7 @@
 							<div class="content">
 								<p>CodeLabsPro is the ultimate resource for codelabs, tutorials and coding bootcamps</p>
 								<ul class="actions">
-									<li><a href="#one" class="button next scrolly">Check out my site!</a></li>
+									<li><a href="#one" class="button next scrolly">Let's Activate Innovation</a></li>
 								</ul>
 							</div>
 						</div>
