--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="AboutMe.html" class="link">About Me</a></h3>
-										<p>A little bit more about me.</p>
+										<h3><a href="AboutMe.html" class="link">About</a></h3>
+										<p>CodeLabs is a coding bootcamp to ramp up your programming skills and get hired by top tech companies</p>
 									</header>
 								</article>
 								<article>
