--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 							<li><a href="projects.html">Projects</a></li>
 							<li><a href="Education.html">Education</a></li>
 							<li><a href="Brown.html">My Time at Brown</a></li>
-							<li><a href="Links.html">Recommended Links</a></li>
+							<li><a href="experiments.html">Experiments</a></li>
 						</ul>
 					</nav>
 
