--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 					<nav id="menu">
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
-							<li><a href="about.html">About</a></li>
+							<li><a href="About.html">About</a></li>
 							<li><a href="Work.html">Work</a></li>
 							<li><a href="projects.html">Projects</a></li>
 							<li><a href="Education.html">Education</a></li>
