--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="MyWork.html" class="link">My Work</a></h3>
+										<h3><a href="Work.html" class="link">My Work</a></h3>
 										<p> What I'm currently working on, and some things I have worked on in the past.</p>
 									</header>
 								</article>
