--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="Work.html" class="link">My Work</a></h3>
-										<p> What I'm currently working on, and some things I have worked on in the past.</p>
+										<h3><a href="Work.html" class="link">Services</a></h3>
+										<p>CodeLabsPro offers Texperts as a Service - Technical consulting office hours with tech gurus and tech experts</p>
 									</header>
 								</article>
 								<article>
