--- a/About.html
+++ b/About.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>CodeLabsPro</title>
+		<title>CodeLabsPro Coding Bootcamp</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -15,8 +15,7 @@
 			<div id="wrapper">
 
 				<!-- Header -->
-				<!-- Note: The "styleN" class below should match that of the banner element. -->
-					<header id="header" class="alt style2">
+					<header id="header" class="alt">
 						<a href="index.html" class="logo"><strong>CODELABSPRO</strong></a>
 						<nav>
 							<a href="#menu">Menu</a>
@@ -24,17 +23,17 @@
 					</header>
 
 				<!-- Menu -->
-				<nav id="menu">
-					<ul class="links">
-						<li><a href="index.html">Home</a></li>
-						<li><a href="About.html">About</a></li>
-						<li><a href="Work.html">Work</a></li>
-						<li><a href="Experience.html">Experience</a></li>
-						<li><a href="Education.html">Education</a></li>
-						<li><a href="Brown.html">My Time at Brown</a></li>
-						<li><a href="Links.html">Recommended Links</a></li>
-					</ul>
-				</nav>
+					<nav id="menu">
+						<ul class="links">
+							<li><a href="index.html">Home</a></li>
+							<li><a href="About.html">About</a></li>
+							<li><a href="Work.html">Work</a></li>
+							<li><a href="projects.html">Projects</a></li>
+							<li><a href="Education.html">Education</a></li>
+							<li><a href="Brown.html">My Time at Brown</a></li>
+							<li><a href="experiments.html">Experiments</a></li>
+						</ul>
+					</nav>
 
 				<!-- Banner -->
 				<!-- Note: The "styleN" class below should match that of the header element. -->
