--- a/Work.html
+++ b/Work.html
@@ -19,7 +19,7 @@
 		<!-- Header -->
 		<!-- Note: The "styleN" class below should match that of the banner element. -->
 		<header id="header" class="alt style2">
-			<a href="index.html" class="logo"><strong>AD</strong></a>
+			<a href="index.html" class="logo"><strong>CODELABSPRO</strong></a>
 			<nav>
 				<a href="#menu">Menu</a>
 			</nav>
