--- a/Work.html
+++ b/Work.html
@@ -46,7 +46,7 @@
 					<img src="images/pic07.jpg" alt="" />
 				</span>
 				<header class="major">
-					<h1>My Work</h1>
+					<h1>Work</h1>
 				</header>
 			</div>
 		</section>
@@ -56,24 +56,7 @@
 			<!-- One -->
 			<section id="one">
 				<div class="inner">
-					<p>As an aspiring computer scientist and computational biologist, my work is primarily focused on
-						these two disciplines.</p>
-					<p>In computer science, my primary areas of interest are algorithms, machine learning, sketching
-						cryptography and computer security. In addition to my work in theoretical computer science, I
-						have significant programming experience in Python, Java and R, and have worked with C, Go and
-						Matlab before.</p>
-					<p>As a computational biologist, I am interested in the intersections of biology and computer
-						science. My areas of interest are in algorithms (especially those pertaining to the problems we
-						encounter computational biology), computational genomics, genomic privacy, big data analysis,
-						cryptography and computer security.</p>
-					<p> I'm currently working with Dr. Mike Schatz at Johns Hopkins, as I pursue a PhD in Computer
-						Science with a focus on Computational Genomics. My latest project was "Sapling: Accelerating
-						Suffix Array Queries with Learned Data Models", which focused on learned index structures/data
-						models for genomics. It was published in Bioinformatics, and can be found <a target="_blank"
-							href="https://academic.oup.com/bioinformatics/article-abstract/37/6/744/5941464">here</a>.
-					</p>
-					<p> My current work is in sketching and sapling approaches to speed up read classification. Stay
-						tuned for the pre-print!</p>
+					<p>CodeLabsPro is the ultimate coding bootcamp and the ultimate resource for codelabs, tutorials and software engineering learning resources.</p>
 					<p>My Google Scholar page can be found <a target="_blank"
 							href="https://scholar.google.com/citations?user=OxAcXusAAAAJ&hl=en">here.</a></p>
 				</div>
