--- a/About.html
+++ b/About.html
@@ -1,114 +1,121 @@
 <!DOCTYPE HTML>
 <html>
-	<head>
-		<title>CodeLabsPro Coding Bootcamp</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-	</head>
-	<body>
 
-		<!-- Wrapper -->
-			<div id="wrapper">
+<head>
+	<title>CodeLabsPro Coding Bootcamp</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+	<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+</head>
 
-				<!-- Header -->
-					<header id="header" class="alt">
-						<a href="index.html" class="logo"><strong>CODELABSPRO</strong></a>
-						<nav>
-							<a href="#menu">Menu</a>
-						</nav>
-					</header>
+<body>
 
-				<!-- Menu -->
-					<nav id="menu">
-						<ul class="links">
-							<li><a href="index.html">Home</a></li>
-							<li><a href="About.html">About</a></li>
-							<li><a href="Work.html">Work</a></li>
-							<li><a href="projects.html">Projects</a></li>
-							<li><a href="Education.html">Education</a></li>
-							<li><a href="Brown.html">My Time at Brown</a></li>
-							<li><a href="experiments.html">Experiments</a></li>
-						</ul>
-					</nav>
+	<!-- Wrapper -->
+	<div id="wrapper">
 
-				<!-- Banner -->
-				<!-- Note: The "styleN" class below should match that of the header element. -->
-					<section id="banner" class="style2">
-						<div class="inner">
-							<span class="image">
-								<img src="images/pic07.jpg" alt="" />
-							</span>
-							<header class="major">
-								<h1>About Me</h1>
-							</header>
-						</div>
-					</section>
+		<!-- Header -->
+		<header id="header" class="alt">
+			<a href="index.html" class="logo"><strong>CODELABSPRO</strong></a>
+			<nav>
+				<a href="#menu">Menu</a>
+			</nav>
+		</header>
 
-				<!-- Main -->
-					<div id="main">
+		<!-- Menu -->
+		<nav id="menu">
+			<ul class="links">
+				<li><a href="index.html">Home</a></li>
+				<li><a href="About.html">About</a></li>
+				<li><a href="Work.html">Work</a></li>
+				<li><a href="projects.html">Projects</a></li>
+				<li><a href="Education.html">Education</a></li>
+				<li><a href="experiments.html">Experiments</a></li>
+			</ul>
+		</nav>
 
-						<!-- One -->
-							<section id="one">
-								<div class="inner">
-									<header class="major">
-										<h2>Welcome</h2>
-									</header>
-									<p>Welcome to CodeLabsPro</p>
-
-									<p>The ultimate coding bootcamp for codelabs, tutorials and software engineering resources</p>
-
-								</div>
-							</section>
-
-						<!-- Two -->
-							<section id="two" class="spotlights">
-								<section>
-									<a href="#" class="image">
-										<img src="images/" alt="" data-position="center center" />
-									</a>
-									<div class="content">
-										<div class="inner">
-											<header class="major">
-												<h3>More About CodeLabsPro</h3>
-											</header>
-											<p></p>
-											<p>CodeLabsPro is the ultimate resource for coding bootcamps</p>
-											</p>
-										</div>
-									</div>
-								</section>
-							</section>
-
-					</div>
-
-				<!-- Footer -->
-					<footer id="footer">
-						<div class="inner">
-							<ul class="icons">
-								<li><a target="_blank" href="https://github.com/codelabspro" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
-								<li><a target="_blank" href="https://medium.com/@codelabspro" class="icon alt fa-linkedin"><span class="label">Medium</span></a></li>
-								<li><a target="_blank" href="https://twitter.com/codelabspro" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
-							</ul>
-							<ul class="copyright">
-								<li>&copy; CodeLabsPro</li><li>Design by: <a target="_blank" href="https://codelabspro.com">CodeLabsPro</a></li>
-							</ul>
-						</div>
-					</footer>
-
+		<!-- Banner -->
+		<!-- Note: The "styleN" class below should match that of the header element. -->
+		<section id="banner" class="style2">
+			<div class="inner">
+				<span class="image">
+					<img src="images/pic07.jpg" alt="" />
+				</span>
+				<header class="major">
+					<h1>About Me</h1>
+				</header>
 			</div>
+		</section>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-			<script src="assets/js/main.js"></script>
+		<!-- Main -->
+		<div id="main">
 
-	</body>
+			<!-- One -->
+			<section id="one">
+				<div class="inner">
+					<header class="major">
+						<h2>Welcome</h2>
+					</header>
+					<p>Welcome to CodeLabsPro</p>
+
+					<p>The ultimate coding bootcamp for codelabs, tutorials and software engineering resources</p>
+
+				</div>
+			</section>
+
+			<!-- Two -->
+			<section id="two" class="spotlights">
+				<section>
+					<a href="#" class="image">
+						<img src="images/" alt="" data-position="center center" />
+					</a>
+					<div class="content">
+						<div class="inner">
+							<header class="major">
+								<h3>More About CodeLabsPro</h3>
+							</header>
+							<p></p>
+							<p>CodeLabsPro is the ultimate resource for coding bootcamps</p>
+							</p>
+						</div>
+					</div>
+				</section>
+			</section>
+
+		</div>
+
+		<!-- Footer -->
+		<footer id="footer">
+			<div class="inner">
+				<ul class="icons">
+					<li><a target="_blank" href="https://github.com/codelabspro" class="icon alt fa-github"><span
+								class="label">GitHub</span></a></li>
+					<li><a target="_blank" href="https://codelabspro.com" class="icon alt fa-linkedin"><span
+								class="label">Medium</span></a></li>
+					<li><a target="_blank" href="https://twitter.com/arun_genomics" class="icon alt fa-twitter"><span
+								class="label">Twitter</span></a></li>
+
+				</ul>
+				<ul class="copyright">
+					<li>&copy; CodeLabsPro</li>
+					<li>Design by: <a target="_blank" href="https://codelabspro.com">CodeLabsPro</a></li>
+				</ul>
+			</div>
+		</footer>
+
+	</div>
+
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.scrolly.min.js"></script>
+	<script src="assets/js/jquery.scrollex.min.js"></script>
+	<script src="assets/js/skel.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+	<script src="assets/js/main.js"></script>
+
+</body>
+
 </html>
