--- a/About.html
+++ b/About.html
@@ -44,7 +44,7 @@
 					<img src="images/pic07.jpg" alt="" />
 				</span>
 				<header class="major">
-					<h1>About Me</h1>
+					<h1>About</h1>
 				</header>
 			</div>
 		</section>
@@ -69,7 +69,7 @@
 			<section id="two" class="spotlights">
 				<section>
 					<a href="#" class="image">
-						<img src="images/" alt="" data-position="center center" />
+						<img src="images/code_labs_pro_logo_1.png" alt="" data-position="center center" />
 					</a>
 					<div class="content">
 						<div class="inner">
