Improved Codelabs.html

--- a/Codelabs.html
+++ b/Codelabs.html
@@ -62,23 +62,12 @@
 			<!-- Two -->
 			<section id="oneB" class="spotlights">
 				<section>
-					<a href="images/brown3.png" class="image">
-						<img src="images/brown3.png" alt="" data-position="center center" />
+					<a href="images/codelabspro_codelab_1.png" class="image">
+						<img src="images/codelabspro_codelab_1.png" alt="" data-position="center center" />
 					</a>
 					<div class="content">
 						<div class="inner">
-							<p> During my time at Brown, I worked with <a target="_blank"
-									href="http://www.brown.edu/Research/Istrail_Lab/sorin.php">Dr. Sorin Istrail</a>, as
-								part of the Istrail Lab at Brown University. My senior thesis, supervised by Dr.
-								Istrail, was on approaches in genomic privacy. The thesis can be found <a
-									target="_blank"
-									href="https://ccmb.brown.edu/sites/g/files/dprerj841/files/ArunDasThesis%20(1).pdf">here</a>.
-								I hope it serves as useful resource to anyone interested in the wonderful intersection
-								of cryptography and genomics.</p>
-							<p> While I was at Brown, I spent a considerable amount of time as a Teaching Assistant in
-								the Computer Science department. Over the three years I served as TA, I helped teach
-								over a thousand students - I held weekly TA hours, took part in development of teaching
-								and testing materials, and spent hundreds of hours grading thousands of assignments.</p>
+							<iframe width="560" height="315" src="https://www.youtube.com/embed/1QR_YalI9Jo?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 						</div>
 					</div>
 				</section>
