--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			<ul class="links">
 				<li><a href="index.html">Home</a></li>
 				<li><a href="About.html">About</a></li>
-				<li><a href="Work.html">Work</a></li>
+				<li><a href="Codelabs.html">Codelabs</a></li>
 				<li><a href="projects.html">Projects</a></li>
 				<li><a href="Education.html">Education</a></li>
 				<li><a href="experiments.html">Experiments</a></li>
