--- a/Codelabs.html
+++ b/Codelabs.html
@@ -62,7 +62,7 @@
 			<!-- Two -->
 			<section id="oneB" class="spotlights">
 				<section>
-					<a href="images/codelabspro_codelab_1.png" class="image">
+					<a href="https://www.youtube.com/embed/1QR_YalI9Jo?controls=0" class="image">
 						<img src="images/codelabspro_codelab_1.png" alt="" data-position="center center" />
 					</a>
 					<div class="content">
@@ -73,16 +73,11 @@
 					</div>
 				</section>
 				<section>
-					<a href="images/KinVis.png" class="image">
-						<img src="images/KinVis.png" alt="" data-position="top center" />
+					<a href="images/codelabspro_codelab_1.png" class="image">
+						<img src="images/codelabspro_codelab_1.png" alt="" data-position="top center" />
 					</a>
 					<div class="content">
 						<div class="inner">
-							<p> In the summer of 2017, I worked with <a target="_blank"
-									href="http://qcri.org.qa/page?name=Michael_Aupetit&a=117&pid=199&lang=en-CA">Dr.
-									Michael Aupetit</a> at <a target="_blank" href="http://qcri.org.qa">QCRI</a> on a
-								visual analytic tool for exploring kinship information in Genome Wide Association
-								Studies (GWAS). The package can be found on my Github page.</p>
 							<p> "KinVis: a visualization tool to detect cryptic relatedness in genetic datasets" is now
 								available on Bioinformatics, and can be found <a target="_blank"
 									href="https://academic.oup.com/bioinformatics/article/35/15/2683/5258105">here</a>.
@@ -92,8 +87,8 @@
 					</div>
 				</section>
 				<section>
-					<a href="images/Breakpoints.png" class="image">
-						<img src="images/Breakpoints.png" alt="" data-position="center center" />
+					<a href="images/codelabspro_codelab_1.png" class="image">
+						<img src="images/codelabspro_codelab_1.png" alt="" data-position="center center" />
 					</a>
 					<div class="content">
 						<div class="inner">
@@ -108,8 +103,8 @@
 					</div>
 				</section>
 				<section>
-					<a href="images/Primed.png" class="image">
-						<img src="images/Primed.png" alt="" data-position="top center" />
+					<a href="images/codelabspro_codelab_1.png" class="image">
+						<img src="images/codelabspro_codelab_1.png" alt="" data-position="top center" />
 					</a>
 					<div class="content">
 						<div class="inner">
@@ -125,8 +120,8 @@
 					</div>
 				</section>
 				<section>
-					<a href="images/BSE_icon2.png" class="image">
-						<img src="images/BSE_icon2.png" alt="" data-position="25% 25%" />
+					<a href="images/codelabspro_codelab_1.png" class="image">
+						<img src="images/codelabspro_codelab_1.png" alt="" data-position="25% 25%" />
 					</a>
 					<div class="content">
 						<div class="inner">
@@ -142,8 +137,8 @@
 					</div>
 				</section>
 				<section>
-					<a href="images/futhead.jpg" class="image">
-						<img src="images/futhead.jpg" alt="" data-position="25% 25%" />
+					<a href="images/codelabspro_codelab_1.png" class="image">
+						<img src="images/codelabspro_codelab_1.png" alt="" data-position="25% 25%" />
 					</a>
 					<div class="content">
 						<div class="inner">
@@ -157,8 +152,8 @@
 					</div>
 				</section>
 				<section>
-					<a href="images/FUTNation.png" class="image">
-						<img src="images/FUTNation.png" alt="" data-position="25% 25%" />
+					<a href="images/codelabspro_codelab_1.png" class="image">
+						<img src="images/codelabspro_codelab_1.png" alt="" data-position="25% 25%" />
 					</a>
 					<div class="content">
 						<div class="inner">
