--- a/Codelabs.html
+++ b/Codelabs.html
@@ -30,10 +30,10 @@
 			<ul class="links">
 				<li><a href="index.html">Home</a></li>
 				<li><a href="About.html">About</a></li>
-				<li><a href="Work.html">Work</a></li>
-				<li><a href="Experience.html">Experience</a></li>
+				<li><a href="Codelabs.html">Codelabs</a></li>
+				<li><a href="projects.html">Projects</a></li>
 				<li><a href="Education.html">Education</a></li>
-				<li><a href="Links.html">Recommended Links</a></li>
+				<li><a href="experiments.html">Experiments</a></li>
 			</ul>
 		</nav>
 
@@ -134,21 +134,22 @@
 			</section>
 
 		</div>
-
+		
 		<!-- Footer -->
 		<footer id="footer">
 			<div class="inner">
 				<ul class="icons">
-					<li><a target="_blank" href="https://github.com/arun96" class="icon alt fa-github"><span
+					<li><a target="_blank" href="https://github.com/codelabspro" class="icon alt fa-github"><span
 								class="label">GitHub</span></a></li>
-					<li><a target="_blank" href="https://www.linkedin.com/in/arun96" class="icon alt fa-linkedin"><span
-								class="label">LinkedIn</span></a></li>
+					<li><a target="_blank" href="https://codelabspro.com" class="icon alt fa-linkedin"><span
+								class="label">Medium</span></a></li>
 					<li><a target="_blank" href="https://twitter.com/arun_genomics" class="icon alt fa-twitter"><span
 								class="label">Twitter</span></a></li>
+
 				</ul>
 				<ul class="copyright">
-					<li>&copy; Arun Das</li>
-					<li>Design by: <a target="_blank" href="https://html5up.net">HTML5 UP</a></li>
+					<li>&copy; CodeLabsPro</li>
+					<li>Design by: <a target="_blank" href="https://codelabspro.com">CodeLabsPro</a></li>
 				</ul>
 			</div>
 		</footer>
