--- a/projects.html
+++ b/projects.html
@@ -174,20 +174,20 @@
 		<footer id="footer">
 			<div class="inner">
 				<ul class="icons">
-					<li><a target="_blank" href="https://github.com/arun96" class="icon alt fa-github"><span
+					<li><a target="_blank" href="https://github.com/codelabspro" class="icon alt fa-github"><span
 								class="label">GitHub</span></a></li>
-					<li><a target="_blank" href="https://www.linkedin.com/in/arun96" class="icon alt fa-linkedin"><span
-								class="label">LinkedIn</span></a></li>
+					<li><a target="_blank" href="https://codelabspro.com" class="icon alt fa-linkedin"><span
+								class="label">Medium</span></a></li>
 					<li><a target="_blank" href="https://twitter.com/arun_genomics" class="icon alt fa-twitter"><span
 								class="label">Twitter</span></a></li>
+
 				</ul>
 				<ul class="copyright">
-					<li>&copy; Arun Das</li>
-					<li>Design by: <a target="_blank" href="https://html5up.net">HTML5 UP</a></li>
+					<li>&copy; CodeLabsPro</li>
+					<li>Design by: <a target="_blank" href="https://codelabspro.com">CodeLabsPro</a></li>
 				</ul>
 			</div>
 		</footer>
-
 	</div>
 
 	<!-- Scripts -->
