--- a/Products.html
+++ b/Products.html
@@ -82,7 +82,7 @@
 					</span>
 					<header class="major">
 						<h3><a href="Products.html" class="link">Products</a></h3>
-						<p>CodeLabsPro Products </p>
+						<p> All the places I've worked at so far. </p>
 					</header>
 				</article>
 				<article>
@@ -90,20 +90,45 @@
 						<img src="images/pic04.jpg" alt="" />
 					</span>
 					<header class="major">
-						<h3><a href="Education.html" class="link">Projects</a></h3>
-						<p>CodeLabsPro Projects</p>
+						<h3><a href="Education.html" class="link">Education</a></h3>
+						<p>I am currently a PhD student at Johns Hopkins, and am a proud alum of Brown University.</p>
 					</header>
 				</article>
 				<article>
 					<span class="image">
-						<img src="images/code_labs_pro_logo_1.png" alt="" />
+						<img src="images/pic05.jpg" alt="" />
 					</span>
 					<header class="major">
-						<h3><a href="Links.html" class="link">Links</a></h3>
-						<p>Useful Links and Resources</p>
+						<h3><a href="Brown.html" class="link">My Time at Brown</a></h3>
+						<p>A little bit more about my Brown experience, and life as a Brunonian.</p>
+					</header>
+				</article>
+				<article>
+					<span class="image">
+						<img src="images/pic06.jpg" alt="" />
+					</span>
+					<header class="major">
+						<h3><a href="Links.html" class="link">Recommended Links</a></h3>
+						<p>Some of my favorite links from around the internet.</p>
 					</header>
 				</article>
 			</section>
+
+			<!-- Two -->
+			<!-- <section id="two">
+								<div class="inner">
+									<header class="major">
+										<h2>Update - 12/25/16</h2>
+									</header>
+									<p>Finished populating this site - I'm still working on resolving some issues, but it's mostly done!</p>
+
+									<ul class="actions">
+										<li><a href="Updates.html" class="button next">View past updates</a></li>
+									</ul>
+
+								</div>
+							</section> -->
+
 		</div>
 
 		<!-- Footer -->
