--- a/Products.html
+++ b/Products.html
@@ -29,7 +29,7 @@
 			<ul class="links">
 				<li><a href="index.html">Home</a></li>
 				<li><a href="About.html">About</a></li>
-				<li><a href="Codelabs.html">Codelabs</a></li>
+				<li><a href="Codelabs.html">CodeLabs</a></li>
 				<li><a href="projects.html">Projects</a></li>
 				<li><a href="Education.html">Education</a></li>
 				<li><a href="experiments.html">Experiments</a></li>
@@ -37,17 +37,15 @@
 		</nav>
 
 		<!-- Banner -->
-		<section id="banner" class="major">
+		<!-- Note: The "styleN" class below should match that of the header element. -->
+		<section id="banner" class="style2">
 			<div class="inner">
+				<span class="image">
+					<img src="images/pic07.jpg" alt="" />
+				</span>
 				<header class="major">
-					<h1>Welcome to CodeLabsPro</h1>
+					<h1>Products</h1>
 				</header>
-				<div class="content">
-					<p>CodeLabsPro is the ultimate resource for codelabs, tutorials and coding bootcamps</p>
-					<ul class="actions">
-						<li><a href="#one" class="button next scrolly">Let's Activate Innovation</a></li>
-					</ul>
-				</div>
 			</div>
 		</section>
 
@@ -55,79 +53,36 @@
 		<div id="main">
 
 			<!-- One -->
-			<section id="one" class="tiles">
-				<article>
-					<span class="image">
-						<img src="images/pic01.jpg" alt="" />
-					</span>
+			<section id="one">
+				<div class="inner">
 					<header class="major">
-						<h3><a href="AboutMe.html" class="link">About</a></h3>
-						<p>CodeLabs is a coding bootcamp to ramp up your programming skills and get hired by top tech
-							companies</p>
+						<h2>Welcome</h2>
 					</header>
-				</article>
-				<article>
-					<span class="image">
-						<img src="images/pic02.jpg" alt="" />
-					</span>
-					<header class="major">
-						<h3><a href="Work.html" class="link">Services</a></h3>
-						<p>CodeLabsPro offers Texperts as a Service - Technical consulting office hours with tech gurus
-							and tech experts</p>
-					</header>
-				</article>
-				<article>
-					<span class="image">
-						<img src="images/pic03.jpg" alt="" />
-					</span>
-					<header class="major">
-						<h3><a href="Products.html" class="link">Products</a></h3>
-						<p> All the places I've worked at so far. </p>
-					</header>
-				</article>
-				<article>
-					<span class="image">
-						<img src="images/pic04.jpg" alt="" />
-					</span>
-					<header class="major">
-						<h3><a href="Education.html" class="link">Education</a></h3>
-						<p>I am currently a PhD student at Johns Hopkins, and am a proud alum of Brown University.</p>
-					</header>
-				</article>
-				<article>
-					<span class="image">
-						<img src="images/pic05.jpg" alt="" />
-					</span>
-					<header class="major">
-						<h3><a href="Brown.html" class="link">My Time at Brown</a></h3>
-						<p>A little bit more about my Brown experience, and life as a Brunonian.</p>
-					</header>
-				</article>
-				<article>
-					<span class="image">
-						<img src="images/pic06.jpg" alt="" />
-					</span>
-					<header class="major">
-						<h3><a href="Links.html" class="link">Recommended Links</a></h3>
-						<p>Some of my favorite links from around the internet.</p>
-					</header>
-				</article>
+					<p>Welcome to CodeLabsPro</p>
+
+					<p>The ultimate coding bootcamp for codelabs, tutorials and software engineering resources</p>
+
+				</div>
 			</section>
 
 			<!-- Two -->
-			<!-- <section id="two">
-								<div class="inner">
-									<header class="major">
-										<h2>Update - 12/25/16</h2>
-									</header>
-									<p>Finished populating this site - I'm still working on resolving some issues, but it's mostly done!</p>
-
-									<ul class="actions">
-										<li><a href="Updates.html" class="button next">View past updates</a></li>
-									</ul>
-
-								</div>
-							</section> -->
+			<section id="two" class="spotlights">
+				<section>
+					<a href="#" class="image">
+						<img src="images/code_labs_pro_logo_1.png" alt="" data-position="center center" />
+					</a>
+					<div class="content">
+						<div class="inner">
+							<header class="major">
+								<h3>More About CodeLabsPro</h3>
+							</header>
+							<p></p>
+							<p>CodeLabsPro is the ultimate resource for coding bootcamps</p>
+							</p>
+						</div>
+					</div>
+				</section>
+			</section>
 
 		</div>
 
@@ -149,6 +104,7 @@
 				</ul>
 			</div>
 		</footer>
+
 	</div>
 
 	<!-- Scripts -->
