Improved index navigation

--- a/index.html
+++ b/index.html
@@ -29,10 +29,11 @@
 			<ul class="links">
 				<li><a href="index.html">Home</a></li>
 				<li><a href="About.html">About</a></li>
+				<li><a href="Services.html">Services</a></li>
 				<li><a href="Codelabs.html">Codelabs</a></li>
-				<li><a href="projects.html">Projects</a></li>
-				<li><a href="Education.html">Education</a></li>
-				<li><a href="experiments.html">Experiments</a></li>
+				<li><a href="projects.html">Products</a></li>
+				<li><a href="Education.html">Projects</a></li>
+				<li><a href="Links.html">Links</a></li>
 			</ul>
 		</nav>
 
