--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 			<ul class="links">
 				<li><a href="index.html">Home</a></li>
 				<li><a href="About.html">About</a></li>
-				<li><a href="Services.html">Services</a></li>
 				<li><a href="Codelabs.html">Codelabs</a></li>
+				<li><a href="Services.html">Services</a></li>
 				<li><a href="projects.html">Products</a></li>
 				<li><a href="Education.html">Projects</a></li>
 				<li><a href="Links.html">Links</a></li>
@@ -62,7 +62,7 @@
 						<img src="images/pic01.jpg" alt="" />
 					</span>
 					<header class="major">
-						<h3><a href="AboutMe.html" class="link">About</a></h3>
+						<h3><a href="About.html" class="link">About</a></h3>
 						<p>CodeLabs is a coding bootcamp to ramp up your programming skills and get hired by top tech
 							companies</p>
 					</header>
@@ -72,7 +72,16 @@
 						<img src="images/pic02.jpg" alt="" />
 					</span>
 					<header class="major">
-						<h3><a href="Work.html" class="link">Services</a></h3>
+						<h3><a href="Codelabs.html" class="link">Codelabs</a></h3>
+						<p>CodeLabsPro offers CodeLabs and Coding Bootcamps</p>
+					</header>
+				</article>
+				<article>
+					<span class="image">
+						<img src="images/pic02.jpg" alt="" />
+					</span>
+					<header class="major">
+						<h3><a href="Services.html" class="link">Services</a></h3>
 						<p>CodeLabsPro offers Texperts as a Service - Technical consulting office hours with tech gurus
 							and tech experts</p>
 					</header>
