--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 						<img src="images/pic04.jpg" alt="" />
 					</span>
 					<header class="major">
-						<h3><a href="Education.html" class="link">Projects</a></h3>
+						<h3><a href="Projects.html" class="link">Projects</a></h3>
 						<p>CodeLabsPro Projects</p>
 					</header>
 				</article>
