--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 				<div class="content">
 					<p>CodeLabsPro is the ultimate resource for codelabs, tutorials and coding bootcamps</p>
 					<ul class="actions">
-						<li><a href="#one" class="button next scrolly">Let's Activate Innovation</a></li>
+						<li><a href="#one" class="button next scrolly">Let's Activate AI Innovation</a></li>
 					</ul>
 				</div>
 			</div>
